--- a/slack.html
+++ b/slack.html
@@ -13,7 +13,7 @@
     <main>
         <section class="profile">
             <h2>My Profile</h2>
-            <img src="slack-profile-picture.jpg" alt="Slack Profile Picture" data-testid="slackProfilePicture" width="200" height="200">
+            <img src="https://ca.slack-edge.com/T07466B189M-U07A16Z084T-de25c5fe1b95-512" alt="Slack Profile Picture" data-testid="slackProfilePicture" width="200" height="200">
             <p><strong>Slack Name:</strong> <span data-testid="slackDisplayName">Young_Hafidh</span></p>
             <p><strong>Slack Email:</strong> <span data-testid="slackEmail">imujaheed33@gmail.com</span></p>
             <p><strong>Current Time (UTC):</strong> <span data-testid="currentTimeUTC" id="currentTimeUTC"></span></p>
@@ -39,7 +39,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 John Doe. All rights reserved.</p>
+        <p>&copy; 2024 mujahid ishaq. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
